<resources>
    <string name="app_name">Classistant</string>
    <string name="title_activity_add_subject">AddSubjectActivity</string>
    <string name="otp">Enter the OTP send to your Email ID:</string>
    <string name="otpConfirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="EnterName">Name</string>
    <string name="EnterPhone">Phone Number</string>
    <string name="EnterDepartment">Department</string>
    <string name="EnterRoll">University Roll Number</string>
    <string name="EnterStream">Stream</string>
    <string name="EnterEmail">e-mail ID</string>
    <string name="OTP_HINT">Enter the OTP here!</string>
    <string name="signup">SIGN UP</string>
    <string name="addsubjecttext">subject</string>
    <string name="raddsubject">subject</string>
    <string name="saddsubjecttext">subject</string>
    <string name="time">  :  -  :  </string>
    <string name="teacherPassword">Password</string>
    <string name="dob">How young are you?</string>
    <string name="collegename">Institute Name</string>
    <string name="section">Class</string>
    <string name="YearDisplay">Year</string>

</resources>
