<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EnterName"
        android:layout_weight=".2"
        android:id="@+id/teacherName"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EnterPhone"
        android:id="@+id/teacherPhone"
        android:inputType="phone"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EnterDepartment"
        android:id="@+id/teacherDepartment"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EnterEmail"
        android:inputType="textEmailAddress"
        android:id="@+id/teacherEmail"/>
</LinearLayout>
