<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:src="@drawable/background">
<LinearLayout android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
android:weightSum="1"
android:gravity="center"
android:padding="20dip">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight=".02">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:src="@drawable/icon"/>
    </LinearLayout>
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="Name"
    android:layout_weight=".2"
    android:id="@+id/studentName">
    <requestFocus/>

</EditText>
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="Roll Number"
    android:layout_weight=".2"
    android:inputType="number"
    android:id="@+id/studentRollNumber"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/section"
        android:hint="@string/section"/>
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="e-mail id"
    android:layout_weight=".2"
    android:id="@+id/studentEmail"
    android:inputType="textEmailAddress"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:id="@+id/dob"
        android:hint="@string/dob"
        android:inputType="date"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:id="@+id/collegename"
        android:inputType="text"
        android:hint="@string/collegename"/>
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/studentPassword"
    android:hint="@string/teacherPassword"
    android:inputType="textPassword"/>
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="Stream"
    android:id="@+id/stream"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_weight=".2"
    android:weightSum="1">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Year"
        android:layout_weight=".4"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".25"
        android:id="@+id/startYear"
        android:inputType="number"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="to"
        android:layout_weight=".1"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".25"
        android:id="@+id/endYear"
        android:inputType="number"/>
</LinearLayout>
<Button
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:text="Sign Up"
    android:clickable="true"
    android:id="@+id/submitDetails"
    android:layout_weight="3.13" />

</LinearLayout>
    </ScrollView>